services/demo-v67/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-v67
  labels:
    name: demo-v67
    app: demo-v67-api
