services/demo-v67/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-v67-service
  namespace: demo-v67
  labels:
    app: demo-v67
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8100
    protocol: TCP
    name: http
  selector:
    app: demo-v67
